# office-automation

./: .gitignore  FIX_REPORT.md  GITHUB_SYNC_REPORT.md  LICENSE  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  README.md  SKILL.md  TEST_REPORT.md  UPDATE_PACKAGE.md  create_project.py  final_test.py  office_automation.py  office_automation_fixed.py  office_automation_fixed_final.py  office_automation_simple.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_example.py  test_fixed_version.py  test_import.py  test_simple_import.py  trae_test_prompt.txt  verify_github.py  修复完成总结.md
core/: __init__.py  format_converter.py  word_processor.py
core_backup/: excel_processor.py  powerpoint_processor.py  wps_integration.py
core_fixed/: excel_processor.py  powerpoint_processor.py  word_processor.py
examples/: create_report.py  generate_presentation.py  process_spreadsheet.py  wps_integration_demo.py
tests/: __init__.py  conftest.py  test_basic.py  test_error_handling.py  test_examples.py  test_excel_module.py  test_final_integration.py  test_integration.py  test_performance.py  test_word_module.py
utils/: __init__.py  error_handler.py
